syntax = "proto3";

package deployment;

import "validate/validate.proto";

option go_package = "github.com/stroppy-io/hatchet-workflow/internal/proto/deployment";

message VmUser {
    string name = 1 [(validate.rules).string.min_len = 1];
    repeated string groups = 2 [(validate.rules).repeated.min_items = 1];
    repeated string ssh_authorized_keys = 3 [(validate.rules).repeated.min_items = 1];
    string sudo_rules = 4 [(validate.rules).string.min_len = 1];
    string shell = 5 [(validate.rules).string.min_len = 1];
}

message Hardware {
    uint32 cores = 1; // in cores
    uint32 memory = 2; // in GB
    uint32 disk = 3; // in GB
}

enum Target {
    TARGET_UNSPECIFIED = 0;
    TARGET_DOCKER = 1;
    TARGET_YANDEX_CLOUD = 2;
}

message Ip {
    string value = 1 [(validate.rules).string.min_len = 1];
}

message Cidr {
    string value = 1 [(validate.rules).string.min_len = 1];
}

message CloudInit {
    string content = 1 [(validate.rules).string.min_len = 1];
    map<string, string> env = 2;
}

message Identifier {
    string id = 1 [(validate.rules).string.min_len = 1]; // always unique
    string name = 2 [(validate.rules).string.min_len = 1]; // human-readable name
    Target target = 3 [(validate.rules).enum.defined_only = true];
}

message Vm {
    message Template {
        Identifier identifier = 1 [(validate.rules).message.required = true];
        Hardware hardware = 2 [(validate.rules).message.required = true];
        string base_image_id = 3 [(validate.rules).string.min_len = 1];
        bool has_public_ip = 4;
        VmUser vm_user = 5;
        Ip internal_ip = 6 [(validate.rules).message.required = true];
        CloudInit cloud_init = 7 [(validate.rules).message.required = true];
        map<string, string> labels = 8;
    }
    Template template = 1 [(validate.rules).message.required = true];
    Ip assigned_internal_ip = 2 [(validate.rules).message.required = true];
    optional Ip assigned_external_ip = 3;
}

message Network {
    Identifier identifier = 1 [(validate.rules).message.required = true];
    Cidr cidr = 2 [(validate.rules).message.required = true];
    repeated Ip ips = 3 [(validate.rules).repeated.min_items = 1];
}

message Deployment {
    message Template {
        Identifier identifier = 1 [(validate.rules).message.required = true];
        Network network = 3 [(validate.rules).message.required = true];
        repeated Vm.Template vm_templates = 4 [(validate.rules).repeated.min_items = 1];
        map<string, string> metadata = 5;
    }
    Template template = 1 [(validate.rules).message.required = true];
    repeated Vm vms = 3 [(validate.rules).repeated.min_items = 1];
}
